--- a/style.scss
+++ b/style.scss
@@ -37,12 +37,11 @@ footer {
 
 header {
     position: fixed;
-    top: 0;
     height: 80px;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
         nav {
             height: 100%;
-            padding: 20px 15%;
+            padding: 20px 10%;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -70,7 +69,6 @@ header {
                             padding: 0;
                             list-style: none;
                             display: flex;
-                            flex-direction: row;
                             justify-content: space-between;
                                 li {
                                         a {
@@ -79,7 +77,7 @@ header {
                                         }
                                         a:hover {
                                             color: $menu-hover;
-                                        }                                                      
+                                        }                                                    
                                 }
                         }
                 }
@@ -96,6 +94,10 @@ header {
                 #menu-overlay:target {
                     display: block;
                 }
+                #menu-overlay:target .overlay {
+                    display: block;
+                    left: 0; 
+                }
                         .overlay {
                             background-color: $overlay-bg-color1;
                             height: 100%;
@@ -108,7 +110,7 @@ header {
                             padding-left: 0;
                             margin: 0;
                             list-style: none;
-                            transition: all 0.5s;
+                            transition: left 0.5s;
                                 li {
                                     padding: 10px 20px;
                                         a {
@@ -122,10 +124,6 @@ header {
                                             color: $overlay-hover;
                                         }
                                 }
-                        }
-                        #menu-overlay:target .overlay {
-                            display: block;
-                            left: 0; 
                         }
                         .close {
                             position: absolute;
@@ -152,17 +150,18 @@ header {
 @media (max-width: 1000px) {
     header {
         nav {
-            .logo {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-                .menu-icon {
-                    display: flex;
+            padding: 10px 5%;
+                .logo {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                    .menu-icon {
+                        display: flex;
+                    }
                 }
-            }
-            .menu {
-                display: none;    
-            }    
+                .menu {
+                    display: none;    
+                }    
         }
     }
 }
@@ -172,7 +171,7 @@ header {
 main {
     padding-top: 80px;
         .bg-img {
-            padding: 0 10%;
+            padding: 20px 10%;
             background-image: url(images/intro-bg.png);
             background-repeat: no-repeat;
             background-size: 100% 600px;
@@ -200,46 +199,55 @@ main {
                                     text-decoration: underline;
                                 }
                         }
-                        .inputs {
+                        .buttons {
                             display: flex;
                             flex-direction: row;
                             justify-content: space-between;
                             width: 330px;
                             height: auto;
-                            input {
-                                color: #fff;
-                                background-color: rgba(#007bff, 0.1);
-                                border: 2px solid #fff;
-                                border-radius: 20px;
-                                width: 150px;
-                                height: 40px;
-                                font-family: 'Montserrat', sans-serif;
-                                font-size: 14px;
-                                font-weight: 600;
-                                text-align: center;
-                                transition: all 0.5s;
-                            }
-                            input:hover {
-                                    color: #fff;
-                                    background-color: #007bff;
-                                    border: 2px solid #007bff;
-                            }
- /* no funciono */          input:target {
-                                    color: #fff;
-                                    background-color: #007bff;
-                                    border: 2px solid #007bff;
-                            }
+                                        button {
+                                            color: #fff;
+                                            background-color: rgba(#007bff, 0.1);
+                                            border: 2px solid #fff;
+                                            border-radius: 20px;
+                                            width: 150px;
+                                            height: 40px;
+                                            font-family: 'Montserrat', sans-serif;
+                                            font-size: 14px;
+                                            font-weight: 600;
+                                            text-align: center;
+                                            transition: all 0.5s;
+                                                a {
+                                                    color: #fff;
+                                                    text-decoration: none;
+                                                }
+                                        }
+                                        button:hover {
+                                                color: #fff;
+                                                background-color: #007bff;
+                                                border: 2px solid #007bff;
+                                        }
                         }
                 }
                 .main-img {
                     margin: 0;
+                    display: flex;
+                    justify-content: center;
                     
                         img {
-                            width: 465px;
+                            width: 100%;
                             height: auto;
                         }    
                 }
         }
+}
+
+@media (max-width: 1000px) {
+    main {
+        .bg-img {
+            padding: 10px 5%;
+        }
+    }
 }
 
 /*
