about recien empezado

--- a/_variables.scss
+++ b/_variables.scss
@@ -30,9 +30,29 @@ $main-bg-color: #1445b3;
 /* SECTION */
 
 $h2-color: #283d50;
+$h2-font: 'Montserrat', sans-serif;
+$h2-font-size: 36px;
+$h2-font-weight: 500;
+
 $h4-color: #556877;
+$h4-font: 'Open Sans', sans-serif;
+$h4-font-size: 15px;
+$h4-font-weight: 400;
+$h4-line-height: 1.5;
+
 $section-h3-color: #212529;
+
 $section-p-color: #212529;
+
+
+$menu-font-size: 14px;
+$menu-font-weight: 500;
+$menu-color: #004289;
+$menu-color-hidden: rgba(0, 0, 0, 0.5);
+$menu-bg-color: #fff;
+$menu-hover: #007bff;
+$menu-active: #007bff;
+$menu-target: #007bff;
 
 /* CARDS */
 
