--- a/style.scss
+++ b/style.scss
@@ -250,6 +250,57 @@ main {
     }
 }
 
+/* --- ABOUT US --- */
+
+.about {
+    height: 100%;
+    padding: 20px 10%;
+        .titulo {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            h2 {
+                margin-top: 80px;
+                color: $h2-color;
+                font-family: $h2-font;
+                font-size: $h2-font-size;
+                font-weight: $h2-font-weight;
+                margin-bottom: 20px;
+            }
+            h4 {
+                color: $h4-color;
+                font-family: $h4-font;
+                font-size: $h4-font-size;
+                font-weight: $h4-font-weight;
+                line-height: $h4-line-height;
+                text-align: center;
+                height: 45px;
+                width: 460px;
+            }
+        }
+        .info-columns {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+                .info-col-1 {
+                    display: flex;
+                    flex-direction: column;
+                    width: 50%;
+                }
+                .info-col-2 {
+                    width: 50%;
+                        img {
+                            width: 100%;
+                        }
+                }
+        }
+}
+
+
+
+
 /*
 .ft-columns {
     color: #ffffff;
