--- a/style.scss
+++ b/style.scss
@@ -268,12 +268,12 @@ main {
                 font-weight: $h2-font-weight;
                 margin-bottom: 20px;
             }
-            h4 {
-                color: $h4-color;
-                font-family: $h4-font;
-                font-size: $h4-font-size;
-                font-weight: $h4-font-weight;
-                line-height: $h4-line-height;
+            p {
+                color: #556877;
+                font-family: $p-font;
+                font-size: $p-font-size;
+                font-weight: $p-font-weight;
+                line-height: $p-line-height;
                 text-align: center;
                 height: 45px;
                 width: 460px;
@@ -288,6 +288,24 @@ main {
                     display: flex;
                     flex-direction: column;
                     width: 50%;
+                    p {
+                        color: $p-color;
+                        font-family: $p-font;
+                        font-size: 16px;
+                        font-weight: $p-font-weight;
+                        line-height: $p-line-height;
+                    }
+                    .data {
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: center;
+                            .data-paragraph {
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: center;
+                            }
+                    }    
                 }
                 .info-col-2 {
                     width: 50%;
@@ -300,20 +318,212 @@ main {
 
 
 
+/* --- FOOTER --- */
 
-/*
-.ft-columns {
-    color: #ffffff;
-    line-height: 30px;
-    font-size: 14px;
-    background-color: #004a99;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+.footer-1 {
+    padding: 60px 10%;
+    color: $footer-color;
+    font-family: $footer-font;
+    font-size: $footer-font-size;
+    font-weight: $footer-font-weight;
+    line-height: $footer-line-height;
+        .footer-columns {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+                .ft-col-1 {
+                    padding: 0 15px;
+                    font-family: 'Montserrat', sans-serif;
+                    flex-basis: 400px;
+                        h1 {
+                            font-weight: $footer-font-weight;
+                            font-size: 35px;
+                            margin: 0;
+                        }
+                        p {
+                            font-size: 13px;
+                            margin: 0;
+                            padding-top: 4px;
+                            line-height: 1.6;
+                        }
+                }
+                .ft-col-2 {
+                    padding: 0 15px;
+                    display: flex;
+                    flex-direction: column;
+                    flex-basis: 150px;
+                    flex-shrink: 2;
+                        h4 {
+                            margin: 0;
+                        }
+                        ul {
+                            margin: 0;
+                            padding: 35px 0;
+                            list-style: none;
+                                li {
+                                    line-height: $footer-line-height;
+                                    a {
+                                        color: $footer-color;
+                                        text-decoration: none;
+                                        transition: color 0.5s;
+                                    }
+                                    a:hover {
+                                        color: #007bff;
+                                    }
+                                }
+                        }
+                }
+                .ft-col-3 {
+                    padding: 0 15px;
+                    display: flex;
+                    flex-direction: column;
+                    flex-basis: 150px;
+                    flex-shrink: 2;
+                        h4 {
+                            margin: 0;
+                        }
+                        p {
+                            margin-top: 35px;
+                            span {
+                                font-weight: bold;
+                            }
+                        }
+                        .icons {
+                            padding-top: 35px;
+                            display: flex;
+                            justify-content: space-evenly;
+                                .rrss {
+                                    color: $footer-color;
+                                    background-color: #007bff;
+                                    height: 35px;
+                                    width: 35px;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    border-radius: 50%;
+                                    margin-right: 4px;
+                                    transition: all 0.5s;
+                                        .fab {
+                                            font-size: 15px;
+                                        }
+                                        a {
+                                            color: $footer-color;
+                                            text-decoration: none;
+                                            transition: color 0.5s;
+                                        }
+                                        a:hover {
+                                            color: $footer-color;
+                                        }
+                                }
+                                .rrss:hover {
+                                    color: #ffffff;
+                                    background-color: #005dc0;
+                                }
+                        }
+                }
+                .ft-col-4 {
+                    padding: 0 15px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    flex-basis: 300px;
+                    flex-shrink: 2;
+                        h4 {
+                            margin: 0;
+                        }
+                        p {
+                            margin-top: 35px;
+                            line-height: $footer-line-height;
+                            }
+                        form .subscribe {
+                            display: flex;
+                            justify-content: flex-start;
+                                .email-form {
+                                    margin-top: 15px;
+                                    height: 36px;
+                                    width: 100%;
+                                }
+                                input[type=submit] {
+                                    color: #ffffff;
+                                    background-color: #007bff;
+                                    height: 36px;
+                                    width: 100px;
+                                    font-family: $footer-font;
+                                    font-size: 15px;
+                                    margin-top: 15px;
+                                    border: 0;
+                                    transition: all 0.5s;
+                                }
+                                input[type=submit]:hover {
+                                    color: #ffffff;
+                                    background-color: #005dc0;
+                                }
+                        }
+                }
+
+        }
 }
 
+.copyright {
+    color: $footer-color;
+    background-color: #00428a;
+    font-family: $footer-font;
+    font-size: $footer-font-size;
+    line-height: $footer-line-height;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+        p {
+            margin: 2px;
+                span {
+                    font-weight: bolder;
+                }
+                a {
+                    color: $footer-color;
+                    text-decoration: none;
+                    transition: all 0.5s;
+                }
+                a:hover {
+                    color: #007bff;
+                }
+        }
+        div {
+            display: flex;
+            align-self: flex-end;
+                .arrow {
+                    color: $footer-color;
+                    background-color: #007bff;
+                    height: 35px;
+                    width: 35px;
+                    position: fixed;
+                    bottom:10px;
+                    right:10px;
+                    z-index: 1;
+                    border-radius: 50%;
+                    transition: all 0.5s;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                        a {
+                            color: $footer-color;
+                            text-decoration: none;
+                            transition: color 0.5s;
+                        }
+                        a:hover {
+                            color: $footer-color;
+                        }
+                }
+                .arrow:hover {
+                    color: $footer-color;
+                    background-color: #005dc0;
+                }
+        }
+}
+
+/*
 @media (max-width: 1000px) and (min-width: 600px){
     .ft-columns {
         display: flex;
@@ -332,12 +542,6 @@ main {
     }
 }
 
-.ft-p1 {
-    padding: 15px;
-    font-family: 'Montserrat';
-    flex-basis: 400px;
-}
-
 @media (max-width: 1000px) and (min-width: 600px){
     .ft-p1 {
         flex-basis: 45%;
@@ -350,25 +554,6 @@ main {
         margin-left: 20px;
         margin-right: 20px;
     }
-}
-
-.ft-p1 h1 {
-    font-weight: lighter;
-    font-size: 35px;
-}
-
-.ft-p1 p {
-    padding-top: 20px;
-    font-size: 13px;
-    font-weight: lighter;
-}
-
-.ft-p4 {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 150px;
-    flex-shrink: 2;
 }
 
 @media (max-width: 1000px) and (min-width: 600px){
@@ -384,28 +569,6 @@ main {
     }
 }
 
-.ft-p4 p {
-    margin: 0px;
-}
-
-a {
-    text-decoration: none;
-    color: #ffffff;
-    transition: color 0.5s;
-}
-
-a:hover {
-    color: #007bff;
-}
-
-.ft-p3 {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 150px;
-    flex-shrink: 2;
-}
-
 @media (max-width: 1000px) and (min-width: 600px){
     .ft-p3 {
         flex-basis: 45%;
@@ -417,19 +580,6 @@ a:hover {
         flex-basis: 40%;
         margin-left: 20px;
     }
-}
-
-.ft-p3 p {
-    margin: 0;
-}
-.ft-p3 span {
-    font-weight: bold;
-}
-
-.icons {
-    padding-top: 15px;
-    display: flex;
-    justify-content: space-evenly;
 }
 
 @media (max-width: 1000px) and (min-width: 600px){
@@ -440,36 +590,7 @@ a:hover {
     }
 }
 
-.rrss {
-    color: #ffffff;
-    background-color: #007bff;
-    height: 35px;
-    width: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    margin-right: 4px;
-    transition: all 0.5s;
-}
 
-.rrss:hover {
-    color: #ffffff;
-    background-color: #005dc0;
-}
-
-.fab {
-    font-size: 15px;
-}
-
-.ft-p2 {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    flex-basis: 300px;
-    flex-shrink: 2;
-}
 
 @media (max-width: 1000px) and (min-width: 600px){
     .ft-p2 {
@@ -484,92 +605,4 @@ a:hover {
         margin-right: 20px;
     }
 }
-
-.ft-p2 p {
-margin: 0;
-}
-
-.subscribe {
-    display: flex;
-    justify-content: flex-start;
-}
-
-.email-form {
-    margin-top: 15px;
-    height: 30px;
-    width: 100%;
-}
-
-input[type=submit] {
-    color: #ffffff;
-    background-color: #007bff;
-    height: 36px;
-    width: 100px;
-    font-family: 'Open Sans';
-    font-size: 15px;
-    margin-top: 15px;
-    border: 0;
-    transition: all 0.5s;
-
-}
-
-input[type=submit]:hover {
-    color: #ffffff;
-    background-color: #005dc0;
-}
-
-.copyright {
-    color: #ffffff;
-    background-color: #00428a;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;;
-}
-
-.copyright p {
-font-size: 14px;
-margin: 2px;
-}
-
-.copyright span {
-    font-weight: bolder;
-}
-
-.copyright a {
-    transition: all 0.5s;
-}
-
-.copyright a:hover {
-    color: #007bff;
-}
-
-.copyright div {
-    display: flex;
-    align-self: flex-end;
-}
-
-.arrow {
-    color: #ffffff;
-    background-color: #007bff;
-    height: 35px;
-    width: 35px;
-    position: fixed;
-    bottom:10px;
-    right:10px;
-    z-index: 1;
-    border-radius: 50%;
-    transition: all 0.5s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.arrow:hover {
-    color: #ffffff;
-    background-color: #005dc0;
-}
-
 */
