--- a/style.scss
+++ b/style.scss
@@ -331,10 +331,12 @@ main {
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
+            height: 100%;
                 .ft-col-1 {
                     padding: 0 15px;
                     font-family: 'Montserrat', sans-serif;
-                    flex-basis: 400px;
+                    flex-basis: 35%;
+                    flex-shrink: 1;
                         h1 {
                             font-weight: $footer-font-weight;
                             font-size: 35px;
@@ -345,14 +347,16 @@ main {
                             margin: 0;
                             padding-top: 4px;
                             line-height: 1.6;
+                            height: 200px;
+
                         }
                 }
                 .ft-col-2 {
                     padding: 0 15px;
                     display: flex;
                     flex-direction: column;
-                    flex-basis: 150px;
-                    flex-shrink: 2;
+                    flex-basis: 15%;
+                    flex-shrink: 0;
                         h4 {
                             margin: 0;
                         }
@@ -360,6 +364,8 @@ main {
                             margin: 0;
                             padding: 35px 0;
                             list-style: none;
+                            height: 200px;
+
                                 li {
                                     line-height: $footer-line-height;
                                     a {
@@ -377,21 +383,29 @@ main {
                     padding: 0 15px;
                     display: flex;
                     flex-direction: column;
-                    flex-basis: 150px;
-                    flex-shrink: 2;
-                        h4 {
-                            margin: 0;
-                        }
-                        p {
-                            margin-top: 35px;
-                            span {
-                                font-weight: bold;
+                    justify-content: space-between;
+                    flex-basis: 15%;
+                    flex-shrink: 0;
+                        div {
+                            display: flex;
+                            flex-direction: column;
+                            h4 {
+                                margin: 0;
+                            }
+                            p {
+                                margin-top: 35px;
+                                height: 200px;
+
+                                span {
+                                    font-weight: bold;
+                                }
                             }
                         }
                         .icons {
-                            padding-top: 35px;
                             display: flex;
+                            flex-direction: row;
                             justify-content: space-evenly;
+                            margin-top: 15px;
                                 .rrss {
                                     color: $footer-color;
                                     background-color: #007bff;
@@ -426,20 +440,21 @@ main {
                     display: flex;
                     flex-direction: column;
                     justify-content: flex-start;
-                    flex-basis: 300px;
-                    flex-shrink: 2;
+                    flex-basis: 35%;
+                    flex-shrink: 1;
                         h4 {
                             margin: 0;
                         }
                         p {
                             margin-top: 35px;
                             line-height: $footer-line-height;
+                            height: 200px;
                             }
                         form .subscribe {
                             display: flex;
                             justify-content: flex-start;
+                            margin-top: 15px;
                                 .email-form {
-                                    margin-top: 15px;
                                     height: 36px;
                                     width: 100%;
                                 }
@@ -450,7 +465,6 @@ main {
                                     width: 100px;
                                     font-family: $footer-font;
                                     font-size: 15px;
-                                    margin-top: 15px;
                                     border: 0;
                                     transition: all 0.5s;
                                 }
@@ -462,6 +476,68 @@ main {
                 }
 
         }
+}
+
+@media (max-width: 1000px) and (min-width: 600px) {
+    .footer-columns {
+        padding-left: 20px;
+        padding-right: 20px;
+        display: flex;
+        flex-wrap: wrap;
+            .ft-col-1 {
+                height: 200px;
+                flex-basis: 10px;
+            }
+            .ft-col-2 {
+                height: 200px;
+                flex-basis: 10px;
+
+            }
+            .ft-col-3 {
+                height: 200px;
+                flex-basis: 10px;
+
+                    .icons {
+                        display: flex;
+                        justify-content: flex-start;
+                    }
+            .ft-col-4 {
+                height: 200px;
+                flex-basis: 10px;
+
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .footer-columns {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+            .ft-col-1 {
+                flex-basis: 100%;
+                margin: 0 20px;
+            }
+            .ft-col-2 {
+                flex-basis: 40%;
+                margin: 20px 20px;
+            }
+            .ft-col-3 {
+                flex-basis: 40%;
+                margin: 20px 20px;
+                    .icons {
+                        margin-top: 15px;
+                        display: flex;
+                        justify-content: flex-start;
+                    }
+            }
+            .ft-col-4 {
+                flex-basis: 100%;
+                margin-left: 20px;
+                margin-right: 20px;
+            }
+    }
 }
 
 .copyright {
@@ -523,86 +599,4 @@ main {
         }
 }
 
-/*
-@media (max-width: 1000px) and (min-width: 600px){
-    .ft-columns {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-}
 
-@media (max-width: 600px) and (min-width: 0px){
-    .ft-columns {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-    }
-}
-
-@media (max-width: 1000px) and (min-width: 600px){
-    .ft-p1 {
-        flex-basis: 45%;
-    }
-}
-
-@media (max-width: 600px) and (min-width: 0){
-    .ft-p1 {
-        flex-basis: 100%;
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-}
-
-@media (max-width: 1000px) and (min-width: 600px){
-    .ft-p4 {
-        flex-basis: 35%;
-    }
-}
-
-@media (max-width: 600px) and (min-width: 0){
-    .ft-p4 {
-        flex-basis: 40%;
-        margin-left: 20px;
-    }
-}
-
-@media (max-width: 1000px) and (min-width: 600px){
-    .ft-p3 {
-        flex-basis: 45%;
-    }
-}
-
-@media (max-width: 600px) and (min-width: 0){
-    .ft-p3 {
-        flex-basis: 40%;
-        margin-left: 20px;
-    }
-}
-
-@media (max-width: 1000px) and (min-width: 600px){
-    .icons {
-        padding-top: 15px;
-        display: flex;
-        justify-content: flex-start;
-    }
-}
-
-
-
-@media (max-width: 1000px) and (min-width: 600px){
-    .ft-p2 {
-        flex-basis: 35%;
-    }
-}
-
-@media (max-width: 600px) and (min-width: 0){
-    .ft-p2 {
-        flex-basis: 100%;
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-}
-*/
