footer @media 1000px terminado, falta 600px

--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ main {
   font-weight: 400;
   line-height: 1.5; }
   .footer-1 .footer-columns {
+    padding: 10px 5%;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -375,26 +376,34 @@ main {
           background-color: #005dc0; }
 
 @media (max-width: 1000px) and (min-width: 600px) {
-  .footer-columns {
-    padding-left: 20px;
-    padding-right: 20px;
-    display: flex;
-    flex-wrap: wrap; }
-    .footer-columns .ft-col-1 {
-      height: 200px;
-      flex-basis: 10px; }
-    .footer-columns .ft-col-2 {
-      height: 200px;
-      flex-basis: 10px; }
-    .footer-columns .ft-col-3 {
-      height: 200px;
-      flex-basis: 10px; }
-      .footer-columns .ft-col-3 .icons {
-        display: flex;
-        justify-content: flex-start; }
-      .footer-columns .ft-col-3 .ft-col-4 {
+  .footer-1 {
+    padding: 60px 5%; }
+    .footer-1 .footer-columns {
+      padding: 10px 5%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between; }
+      .footer-1 .footer-columns .ft-col-1 {
         height: 200px;
-        flex-basis: 10px; } }
+        flex-basis: 40%; }
+      .footer-1 .footer-columns .ft-col-2 {
+        height: 200px;
+        flex-basis: 40%; }
+      .footer-1 .footer-columns .ft-col-3 {
+        margin-top: 40px;
+        flex-basis: 40%; }
+        .footer-1 .footer-columns .ft-col-3 div p {
+          height: 120px; }
+        .footer-1 .footer-columns .ft-col-3 .icons {
+          margin-top: 5px;
+          justify-content: flex-start; }
+      .footer-1 .footer-columns .ft-col-4 {
+        margin-top: 40px;
+        flex-basis: 40%; }
+        .footer-1 .footer-columns .ft-col-4 p {
+          height: 120px; }
+        .footer-1 .footer-columns .ft-col-4 form .subscribe {
+          margin-top: 5px; } }
 
 @media (max-width: 600px) {
   .footer-columns {
