--- a/style.scss
+++ b/style.scss
@@ -328,6 +328,7 @@ main {
     font-weight: $footer-font-weight;
     line-height: $footer-line-height;
         .footer-columns {
+            padding: 10px 5%;
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
@@ -479,34 +480,45 @@ main {
 }
 
 @media (max-width: 1000px) and (min-width: 600px) {
-    .footer-columns {
-        padding-left: 20px;
-        padding-right: 20px;
-        display: flex;
-        flex-wrap: wrap;
-            .ft-col-1 {
-                height: 200px;
-                flex-basis: 10px;
-            }
-            .ft-col-2 {
-                height: 200px;
-                flex-basis: 10px;
-
-            }
-            .ft-col-3 {
-                height: 200px;
-                flex-basis: 10px;
-
-                    .icons {
-                        display: flex;
-                        justify-content: flex-start;
+    .footer-1 {
+        padding: 60px 5%;
+            .footer-columns {
+                padding: 10px 5%;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                    .ft-col-1 {
+                        height: 200px;
+                        flex-basis: 40%;
                     }
-            .ft-col-4 {
-                height: 200px;
-                flex-basis: 10px;
-
-            }
-        }
+                    .ft-col-2 {
+                        height: 200px;
+                        flex-basis: 40%;
+                    }
+                    .ft-col-3 {
+                        margin-top: 40px;
+                        flex-basis: 40%;
+                            div {
+                                p {
+                                    height: 120px;
+                                }
+                            }
+                            .icons {
+                                margin-top: 5px;
+                                justify-content: flex-start;
+                            }
+                    }
+                    .ft-col-4 {
+                        margin-top: 40px;
+                        flex-basis: 40%;
+                            p {
+                                height: 120px;
+                            }
+                            form .subscribe {
+                                margin-top: 5px;
+                            }
+                    }
+                }
     }
 }
 
